# rest_api_testing

./: README.md  config.py  pyproject.toml
assertions/: base_assertions.py  people_assertions.py
clients/covid_tracker/: covid_tracker_client.py
clients/people/: people_client.py
helpers/: covid_tracker_helper.py  people_helper.py
steps/: __init__.py  user_steps.py
tests/: schema_test.py  test_covid.py  test_people.py  test_schema.py
utils/: api_request.py  file_reader.py
